--- a/codigo-azul-front/package.json
+++ b/codigo-azul-front/package.json
@@ -8,11 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "date-fns": "^2.30.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
