--- a/node/package.json
+++ b/node/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
     "mysql2": "^3.6.1",
     "sequelize": "^6.33.0"
   }
